--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0",
+    "three": "^0.160.0",
     "vite": "^7.3.0"
   }
 }
