--- a/src/screens/SmartHomeStore.jsx.example
+++ b/src/screens/SmartHomeStore.jsx.example
@@ -76,7 +76,13 @@ export default function SmartHomeStore({ onBack }) {
     <div className="smarthome-store" style={{ overflowX: 'hidden', width: '100%' }}>
       <header className="header">
         <div className="logo" style={{ display: 'flex', alignItems: 'center', gap: '12px' }}>
-          <img src="/cyberlife-icone2.png" alt="CyberLife Logo" style={{ height: '80px' }} />
+          <img
+            src="/cyberlife-icone2.png"
+            alt="CyberLife Logo"
+            style={{ height: '80px' }}
+            loading="lazy"
+            decoding="async"
+          />
           <span style={{ fontFamily: 'Rajdhani, sans-serif', fontWeight: 700, fontSize: '2rem', color: '#00d9ff', letterSpacing: '2px' }}>
             CyberLife
           </span>
