--- a/vercel.json
+++ b/vercel.json
@@ -49,7 +49,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://ajax.googleapis.com https://*.googleapis.com https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com https:; connect-src 'self' https://*.supabase.co https://*.supabase.com wss://*.supabase.co wss://*.supabase.com https://ajax.googleapis.com; media-src 'self' https://*.supabase.co https://*.supabase.com; object-src 'self' https://*.supabase.co https://*.supabase.com; frame-src 'self' https://*.supabase.co https://*.supabase.com https://tvukdcbvqweechmawdac.supabase.co;"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://ajax.googleapis.com https://*.googleapis.com https://cdn.jsdelivr.net https://unpkg.com 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com https:; connect-src 'self' https://*.supabase.co https://*.supabase.com wss://*.supabase.co wss://*.supabase.com https://ajax.googleapis.com https://fonts.googleapis.com; media-src 'self' https://*.supabase.co https://*.supabase.com; object-src 'self' https://*.supabase.co https://*.supabase.com; frame-src 'self' https://*.supabase.co https://*.supabase.com https://tvukdcbvqweechmawdac.supabase.co; worker-src 'self' blob:; child-src 'self' blob:;"
         }
       ]
     }
